--- a/.env
+++ b/.env
@@ -4,8 +4,12 @@
 # DB_NAME=gutendex_new
 
 
-DB_HOST=localhost
+
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=Atal@9313
 DB_NAME=gutendex
+
+
+
