--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # DB_NAME=gutendex_new
 
 
-
+#orignal 
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
@@ -12,4 +12,8 @@ DB_PASSWORD=Atal@9313
 DB_NAME=gutendex
 
 
-
+#local check 
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=Atal@9313
+# DB_NAME=gutendex_new
